--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "algoliasearch": "^4.8.3",
     "firebase": "^8.2.1",
     "jquery": "^3.5.1",
+    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -18,6 +19,7 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "search-insights": "^1.6.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
