--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "algoliasearch": "^4.8.3",
+    "compressorjs": "^1.0.7",
     "firebase": "^8.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
